crates/bonsaidb-macros/tests/ui/view/missing_name.stderr
error: required `name` is not specified\n\n= help: try `#[collection(name=\"name\")]`
 --> tests/ui/view/missing_name.rs:3:10
  |
3 | #[derive(Collection)]
  |          ^^^^^^^^^^
  |
  = note: this error originates in the derive macro `Collection` (in Nightly builds, run with -Z macro-backtrace for more info)
